--- a/css/vtour.css
+++ b/css/vtour.css
@@ -49,7 +49,6 @@ body, html {
 }
 
 /* AutoComplete Container*/
-
 #autoCompleteContainer, #autoCompleteContainerNav {
     padding: 0;
     background-color: white;
@@ -97,8 +96,7 @@ body, html {
     padding-bottom: 1px;
 }
 
-/* Scrollbar styling - no iExplorer :( */
-
+/* Scrollbar styling - webkit only :( */
 ::-webkit-scrollbar {
     width: 12px;
 }
@@ -114,7 +112,6 @@ body, html {
 }
 
 /* navSlider */
-
 #navSlider {
     min-width: 300px;
     max-width: 500px;
@@ -123,7 +120,6 @@ body, html {
     background-color: white;
     position: absolute;
     top: 0;
-    left: 0;
 }
 
 #navSlider div {
