--- a/css/vtour.css
+++ b/css/vtour.css
@@ -4,7 +4,7 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    min-width: 300px;
+    min-width: 300px !important;
     overflow: hidden;
 }
 
@@ -128,7 +128,8 @@ body, html {
 }
 
 #navHeader {
-    background-color: #519FF4;
+    background-color: #4384F6;
+    border-radius: 0;
 }
 
 #navHeader input {
@@ -145,12 +146,15 @@ body, html {
     font-size: 15px;
 }
 
+#navHeader input:last-child {
+    margin-bottom: 30px !important;
+}
+
 #navBarClose {
     display: inline-block;
     text-align: right !important;
-    width: 100% !important;
     padding: 0 !important;
-    margin: 5px 10px 0 0 !important;
+    margin: 5px 10px;
     height: auto;
     font-size: 40px !important;
 }
@@ -164,6 +168,11 @@ body, html {
     width: 100%;
     font-size: 30px;
     float: left;
+}
+
+#autoCompleteContainerNav li {
+    margin: 0;
+    padding: 4px 0;
 }
 
 /* Font awesome */
