--- a/css/vtour.css
+++ b/css/vtour.css
@@ -1,5 +1,5 @@
 body, html {
-    background-color: dodgerblue;
+    background-color: #f7f6f9;
     width: 100%;
     height: 100%;
     margin: 0;
@@ -13,7 +13,6 @@ body, html {
     margin: 10px;
     max-width: 400px;
     width: calc(100% - 20px);
-    background-color: blue;
 }
 
 #searchBar {
