--- a/css/vtour.css
+++ b/css/vtour.css
@@ -50,8 +50,9 @@ body, html {
 
 /* AutoComplete Container*/
 #autoCompleteContainer, #autoCompleteContainerNav {
-    z-index: 1001;
+    z-index: 99;
     padding: 0;
+    min-height: 0 !important;
     background-color: white;
     border-radius: 2px;
     list-style: none;
