--- a/css/vtour.css
+++ b/css/vtour.css
@@ -4,7 +4,7 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    min-width: 300px !important;
+    min-width: 150px !important;
     overflow: hidden;
 }
 
@@ -118,11 +118,19 @@ body, html {
     z-index: 101;
     min-width: 300px;
     max-width: 500px;
+    margin-left: -1000px;
     width: 50%;
     height: 100%;
     background-color: white;
     position: absolute;
     top: 0;
+}
+
+@media (max-width: 300px) {
+    #navSlider {
+        width: 100%;
+        min-width: 0;
+    }
 }
 
 #navSlider div {
