--- a/css/vtour.css
+++ b/css/vtour.css
@@ -170,9 +170,20 @@ body, html {
     font-size: 40px !important;
 }
 
-#navHeader i {
+#navHeader i.center {
     display: inline-block;
     text-align: center;
+    cursor: pointer;
+    padding: 40px 0;
+    color: gray;
+    width: 100%;
+    font-size: 30px;
+    float: left;
+}
+
+#navHeader i.right {
+    display: inline-block;
+    text-align: right;
     cursor: pointer;
     padding: 40px 0;
     color: gray;
@@ -184,6 +195,21 @@ body, html {
 #autoCompleteContainerNav li {
     margin: 0;
     padding: 4px 0;
+}
+
+#navHeader .inputWrapper {
+    position:relative;
+}
+
+#navHeader .inputWrapper i {
+    z-index: 105;
+    position:absolute;
+    cursor: pointer;
+    right:0;
+    top: 17px;
+    font-size: 20px;
+    color: white;
+    visibility: hidden;
 }
 
 /* Font awesome */
