--- a/css/vtour.css
+++ b/css/vtour.css
@@ -271,3 +271,11 @@ body, html {
     top: 0;
     left: 0;
 }
+
+#Map2dContainer {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
