--- a/css/vtour.css
+++ b/css/vtour.css
@@ -270,19 +270,12 @@ body, html {
 }
 
 /* Map2D */
-#Map2D {
+
+#Map2d {
     background-color: whitesmoke;
     position: absolute;
     width: 110%;
     height: 110%;
-    top: 0;
-    left: 0;
-}
-
-#Map2dContainer {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
 }
